fix: optimización de código